MB-35326: Reset cached vbucket_state on VBucket creation

The cached vbucket_state is unconditionally populated with
the state of all vbuckets found on disk during bucket creation.

However not all vbuckets found will become VBucket objects (dead
state vbuckets aren't created), so we may later create new
VBucket objects in their default state (e.g. snapshot range of
0,0).

Resetting the cached vbucket_state on creation means that the
cached state will be consistent with the new VBucket.

Change-Id: I122c21f34f1eca129a2ff4bc29f42f96645bb8d2
Reviewed-on: http://review.couchbase.org/112789
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>